k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-health
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    app: grpc-health
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: grpc
  selector:
    app: grpc-health
